<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/container">


    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_vertical"
        android:id="@+id/vertical25"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_vertical"
        android:id="@+id/vertical50"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_vertical"
        android:id="@+id/vertical75"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal20"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal36"
        app:layout_constraintGuide_percent="0.36" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal52"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal68"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal84"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        style="@style/guideline_horizontal"
        android:id="@+id/horizontal9"
        app:layout_constraintGuide_percent="0.09" />

    <Button
        android:id="@+id/one"
        style="@style/button"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="@id/horizontal52"
        app:layout_constraintEnd_toEndOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal36" />

    <Button
        android:id="@+id/two"
        style="@style/button"
        android:text="@string/two"
        app:layout_constraintBottom_toBottomOf="@id/horizontal52"
        app:layout_constraintEnd_toEndOf="@id/vertical50"
        app:layout_constraintStart_toStartOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal36" />

    <Button
        android:id="@+id/three"
        style="@style/button"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@id/horizontal52"
        app:layout_constraintEnd_toEndOf="@id/vertical75"
        app:layout_constraintStart_toStartOf="@id/vertical50"
        app:layout_constraintTop_toTopOf="@id/horizontal36" />

    <Button
        android:id="@+id/four"
        style="@style/button"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="@id/horizontal68"
        app:layout_constraintEnd_toEndOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal52" />

    <Button
        android:id="@+id/five"
        style="@style/button"
        android:text="@string/five"
        app:layout_constraintBottom_toBottomOf="@id/horizontal68"
        app:layout_constraintEnd_toEndOf="@id/vertical50"
        app:layout_constraintStart_toStartOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal52" />

    <Button
        android:id="@+id/six"
        style="@style/button"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@id/horizontal68"
        app:layout_constraintEnd_toEndOf="@id/vertical75"
        app:layout_constraintStart_toStartOf="@id/vertical50"
        app:layout_constraintTop_toTopOf="@id/horizontal52" />

    <Button
        android:id="@+id/seven"
        style="@style/button"
        android:text="@string/seven"
        app:layout_constraintBottom_toBottomOf="@id/horizontal84"
        app:layout_constraintEnd_toEndOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal68" />

    <Button
        android:id="@+id/eight"
        style="@style/button"
        android:text="@string/eight"
        app:layout_constraintBottom_toBottomOf="@id/horizontal84"
        app:layout_constraintEnd_toEndOf="@id/vertical50"
        app:layout_constraintStart_toStartOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal68" />

    <Button
        android:id="@+id/nine"
        style="@style/button"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@id/horizontal84"
        app:layout_constraintEnd_toEndOf="@id/vertical75"
        app:layout_constraintStart_toStartOf="@id/vertical50"
        app:layout_constraintTop_toTopOf="@id/horizontal68" />

    <Button
        android:id="@+id/zero"
        style="@style/button"
        android:text="@string/zero"
        app:layout_constraintEnd_toEndOf="@id/vertical50"
        app:layout_constraintStart_toStartOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal84" />

    <Button
        android:id="@+id/point"
        style="@style/button"
        android:text="@string/point"
        app:layout_constraintEnd_toEndOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal84" />

    <Button
        android:id="@+id/percent"
        style="@style/button"
        android:text="@string/percent"
        app:layout_constraintEnd_toEndOf="@id/vertical75"
        app:layout_constraintStart_toStartOf="@id/vertical50"
        app:layout_constraintTop_toTopOf="@id/horizontal84" />

    <Button
        android:id="@+id/plus"
        style="@style/button"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@id/horizontal36"
        app:layout_constraintEnd_toEndOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal20" />

    <Button
        android:id="@+id/minus"
        style="@style/button"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@id/horizontal36"
        app:layout_constraintEnd_toEndOf="@id/vertical50"
        app:layout_constraintStart_toStartOf="@id/vertical25"
        app:layout_constraintTop_toTopOf="@id/horizontal20" />

    <Button
        android:id="@+id/mul"
        style="@style/button"
        android:text="@string/multiplication"
        app:layout_constraintBottom_toBottomOf="@id/horizontal36"
        app:layout_constraintEnd_toEndOf="@id/vertical75"
        app:layout_constraintStart_toStartOf="@id/vertical50"
        app:layout_constraintTop_toTopOf="@id/horizontal20" />

    <Button
        android:id="@+id/div"
        style="@style/button"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="@id/horizontal36"
        app:layout_constraintStart_toStartOf="@id/vertical75"
        app:layout_constraintTop_toTopOf="@id/horizontal20" />

    <Button
        android:id="@+id/equal"
        style="@style/button"
        android:background="@drawable/custom_result_button"
        android:text="@string/equals"
        app:layout_constraintStart_toStartOf="@id/vertical75"
        app:layout_constraintTop_toTopOf="@id/horizontal68" />

    <Button
        android:id="@+id/delete"
        style="@style/button"
        android:background="@drawable/custom_cancel_button"
        android:text="@string/clearing"
        app:layout_constraintBottom_toBottomOf="@id/horizontal52"
        app:layout_constraintStart_toStartOf="@id/vertical75"
        app:layout_constraintTop_toTopOf="@id/horizontal36" />

    <ImageButton
        android:id="@+id/backspace"
        style="@style/button"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintBottom_toBottomOf="@id/horizontal68"
        app:layout_constraintStart_toStartOf="@id/vertical75"
        app:layout_constraintTop_toTopOf="@id/horizontal52" />

    <TextView
        android:id="@+id/tv_result"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="3dp"
        android:background="@drawable/custom_label"
        android:gravity="start|bottom"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:textSize="58sp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/horizontal20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_input"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="end"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:textSize="40sp"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/horizontal20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>